<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/colorbutton"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/setdefaultlayout"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnsetshipping"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@android:color/white"
            android:text="@string/set_as_shipping_address"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnsetbilling"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:text="@string/set_as_billing_address"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/verifylayout"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnverify"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:text="@string/verify_address"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btnsendverify"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
            android:text="@string/resend_verification_code"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="18dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btndeleteaddr"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:text="@string/delete_this_address"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18dp" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/cancel"
        android:textSize="18dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>