<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.app.mboostertwv2.activity_folder.ContactUs"
    tools:ignore="MissingPrefix">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/help_and_contact_us"
                android:textColor="@color/colorbutton"
                android:textSize="20dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/toolbar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/helpandcontactus" />

    <TextView
        android:id="@+id/textView"
        fontPath="fonts/gotham_book_bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:text="@string/contact_us_1"
        android:textColor="@color/colorbutton"
        android:textSize="@dimen/contact_us_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_address"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView9"
            fontPath="fonts/gotham_book_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:text="@string/contact_us_2"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/contact_us_email"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView11"
            fontPath="fonts/gotham_book_bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/contact_us_call"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/textView13"
            fontPath="fonts/gotham_book_bold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_us_4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

</RelativeLayout>
