<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/payment_method"
        android:textColor="@color/colorbutton"
        android:textSize="25dp" />

    <Button
        android:id="@+id/btnMMpsot"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        android:text="@string/mmspot"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnCreditCard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@android:color/white"
        android:text="@string/credit_card"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btnOn9banking"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:text="@string/online_banking"
        android:textAllCaps="false"
        android:textColor="#000"
        android:textSize="18dp" />

    <ListView
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_width="230dp"
        android:divider="@null"
        android:layout_height="wrap_content"
        android:id="@+id/listview"/>


</LinearLayout>