<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.app.mboostertwv2.fragment_folder.VerifyAddress">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/verify_address"
                android:textColor="@color/colorbutton"
                android:textSize="20dp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar1"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="15dp"
            android:text="@string/address_info"
            android:layout_margin="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/address"
                android:textSize="14dp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/tvverify"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/customlayout3">

            <EditText
                android:id="@+id/verifycode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="#fff"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F4AE2A">


        <TextView
            android:id="@+id/tvsubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textSize="20dp" />

    </RelativeLayout>

</RelativeLayout>
