<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.app.mboostertwv2.shopping_mall.SelectSBaddress">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:text="@string/select_address"
                android:textColor="@color/colorbutton"
                android:textSize="20dp" />


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_below="@+id/toolbar1"
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/shippinglist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="18dp"
        android:text="@string/no_address_found"
        android:id="@+id/no_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:visibility="gone"
        android:layout_below="@+id/no_address"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:textSize="18dp"
        android:text="@string/add_address"
        android:id="@+id/add_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
